infra/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: stones-ingres
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: stones-web-service
              servicePort: 80
          - path: "/api/*"
            backend:
              serviceName: stones-server-service
              servicePort: 3000
          - path: "/sys/*"
            backend:
              serviceName: stones-server-service
              servicePort: 3000
